--- a/exercise-service/src/main/resources/application.properties
+++ b/exercise-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=exercise-service
-spring.config.import=configserver:http://localhost:8888
+spring.config.import=optional:configserver:http://localhost:8888
 #
 #server.port=8084
 ##db
