--- a/gateway-service/src/main/resources/application.properties
+++ b/gateway-service/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=gateway-service
-spring.config.import=configserver:http://localhost:8888
+# optional pt docker
+spring.config.import=optional:configserver:http://localhost:8888
 #server.port=8080
 ###Eureka
 #eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
