--- a/invoices-service/src/main/resources/application.properties
+++ b/invoices-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=invoice-service
-spring.config.import=configserver:http://localhost:8888
+spring.config.import=optional:configserver:http://localhost:8888
 #server.port=8087
 ##db
 #spring.datasource.url=jdbc:postgresql://localhost:5545/wellness
