--- a/service-registry/src/main/resources/application-docker.properties
+++ b/service-registry/src/main/resources/application-docker.properties
@@ -1,4 +1,8 @@
-spring.config.import=configserver:http://config-server:8888/
+spring.config.import=optional:configserver:http://config-server:8888
 # aberatii pt ca nu merege config server
 spring.cloud.config.fail-fast=false
+# nu merge config
+#server.port=8761
+#eureka.client.register-with-eureka=false
+#eureka.client.fetch-registry=false
 
