--- a/service-registry/src/main/resources/application.properties
+++ b/service-registry/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=service-registry
-spring.config.import=configserver:http://localhost:8888
+#spring.config.import=configserver:http://localhost:8888
+# pt docker nu merege sa schimb profilul :(, normal merege brici
+spring.config.import=optional:configserver:http://localhost:8888
 #server.port=8761
 #eureka.client.register-with-eureka=false
 #eureka.client.fetch-registry=false
