--- a/training-service/src/main/resources/application.properties
+++ b/training-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=training-service
-spring.config.import=configserver:http://localhost:8888
+spring.config.import=optional:configserver:http://localhost:8888
 #server.port=8085
 ##db
 #spring.r2dbc.url=r2dbc:postgresql://localhost:5544/wellness
