--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -76,10 +76,10 @@ services:
     ports:
       - "8761:8761"
     environment:
-      # nu ia nici profilul de fapt e de la config trb cu optional la default e cv gen the edgo pt nextjs
+      # nu ia nici profilul de fapt e de la config trb cu optional la default e cv gen the edge pt nextjs
       SPRING_PROFILES_ACTIVE: docker
       #      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eureka-container-awbd:8761/eureka
-
+      # la eureka merege doar asa dat din docker, altfel nu vrea
       SPRING_CONFIG_IMPORT: configserver:http://config-server:8888
     #      SPRING_APPLICATION_NAME: service-registry
     networks:
@@ -99,7 +99,7 @@ services:
     environment:
       #aceeasi problema cu config
       SPRING_PROFILES_ACTIVE: docker
-      SPRING_CONFIG_IMPORT: configserver:http://config-server:8888
+    #      SPRING_CONFIG_IMPORT: configserver:http://config-server:8888
     networks:
       - awbd
     restart: unless-stopped
@@ -117,7 +117,7 @@ services:
       - "8081:8081"
     environment:
       SPRING_PROFILES_ACTIVE: docker
-      SPRING_CONFIG_IMPORT: configserver:http://config-server:8888
+    #      SPRING_CONFIG_IMPORT: configserver:http://config-server:8888
     #      openapi.service.url: http://localhost:8080
     networks:
       - awbd
@@ -137,7 +137,7 @@ services:
       - "8083:8083"
     environment:
       SPRING_PROFILES_ACTIVE: docker
-      SPRING_CONFIG_IMPORT: configserver:http://config-server:8888
+    #      SPRING_CONFIG_IMPORT: configserver:http://config-server:8888
     networks:
       - awbd
     restart: unless-stopped
@@ -156,7 +156,7 @@ services:
       - "8084:8084"
     environment:
       SPRING_PROFILES_ACTIVE: docker
-      SPRING_CONFIG_IMPORT: configserver:http://config-server:8888
+    #      SPRING_CONFIG_IMPORT: configserver:http://config-server:8888
     networks:
       - awbd
     restart: unless-stopped
@@ -175,7 +175,7 @@ services:
       - "8087:8087"
     environment:
       SPRING_PROFILES_ACTIVE: docker
-      SPRING_CONFIG_IMPORT: configserver:http://config-server:8888
+    #      SPRING_CONFIG_IMPORT: configserver:http://config-server:8888
     networks:
       - awbd
     restart: unless-stopped
@@ -195,7 +195,7 @@ services:
       - "8086:8086"
     environment:
       SPRING_PROFILES_ACTIVE: docker
-      SPRING_CONFIG_IMPORT: configserver:http://config-server:8888
+    #      SPRING_CONFIG_IMPORT: configserver:http://config-server:8888
     networks:
       - awbd
     restart: unless-stopped
@@ -216,7 +216,7 @@ services:
       - "8082:8082"
     environment:
       SPRING_PROFILES_ACTIVE: docker
-      SPRING_CONFIG_IMPORT: configserver:http://config-server:8888
+    #      SPRING_CONFIG_IMPORT: configserver:http://config-server:8888
     networks:
       - awbd
     restart: unless-stopped
@@ -236,7 +236,7 @@ services:
       - "8085:8085"
     environment:
       SPRING_PROFILES_ACTIVE: docker
-      SPRING_CONFIG_IMPORT: configserver:http://config-server:8888
+    #      SPRING_CONFIG_IMPORT: configserver:http://config-server:8888
     networks:
       - awbd
     restart: unless-stopped
