--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=user-service
-spring.config.import=optional:configserver:http://localhost:8888
+spring.config.import=optional:configserver:http://localhost:8888,classpath:secret.properties
 #server.port=8081
 ##db
 #spring.r2dbc.url=r2dbc:postgresql://localhost:5544/wellness
