--- a/kind/kind-config.yml
+++ b/kind/kind-config.yml
@@ -9,6 +9,11 @@ nodes:
         nodeRegistration:
           kubeletExtraArgs:
             node-labels: "ingress-ready=true"
+    extraMounts:
+      - hostPath: "/c/Master/An 1/Sem2/AWBD/Proiect/k8s_data/postgres"
+        containerPath: /mnt/data/postgres
+      - hostPath: "/c/Master/An 1/Sem2/AWBD/Proiect/k8s_data/postgres-invoices"
+        containerPath: /mnt/data/postgres-invoices
     extraPortMappings:
       - containerPort: 80
         hostPort: 80
