--- a/client-micro/package.json
+++ b/client-micro/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-toolbar": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@stomp/stompjs": "^7.0.0",
     "@studio-freight/lenis": "^1.0.42",
     "@tanstack/react-table": "^8.13.2",
     "@tiptap/pm": "^2.2.4",
@@ -52,9 +53,11 @@
     "react-confetti": "^6.1.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
+    "react-stomp-hooks": "^2.2.1",
     "react-use": "^17.5.0",
     "react-vertical-timeline-component": "^3.6.0",
     "sharp": "^0.33.4",
+    "sockjs-client": "^1.6.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.0",
