--- a/gateway-service/src/main/resources/application.properties
+++ b/gateway-service/src/main/resources/application.properties
@@ -57,3 +57,5 @@ spring.config.import=optional:configserver:http://localhost:8888
 ##zipkin
 #management.tracing.sampling.probability=1.0
 #management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+logging.level.org.springframework.cloud.gateway=DEBUG
+logging.level.reactor.netty=DEBUG
