--- a/kind/kind-config.yml
+++ b/kind/kind-config.yml
@@ -13,7 +13,9 @@ nodes:
       - hostPath: "/c/Master/An 1/Sem2/AWBD/Proiect/k8s_data/postgres"
         containerPath: /mnt/data/postgres
       - hostPath: "/c/Master/An 1/Sem2/AWBD/Proiect/k8s_data/postgres-invoices"
-        containerPath: /mnt/data/postgres-invoices
+        containerPath: /mnt/data/postgres-messages
+      - hostPath: "/c/Master/An 1/Sem2/AWBD/Proiect/k8s_data/postgres-messages"
+        containerPath: /mnt/data/postgres-messages
     extraPortMappings:
       - containerPort: 80
         hostPort: 80
