--- a/client-micro/Dockerfile
+++ b/client-micro/Dockerfile
@@ -54,7 +54,6 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm install
 
-
 # Rebuild the source code only when needed
 FROM base AS builder
 WORKDIR /app
@@ -72,7 +71,12 @@ RUN npm run build
 FROM base AS runner
 WORKDIR /app
 
-ENV NODE_ENV production
+ENV NODE_ENV=production
+ENV NEXT_PUBLIC_SPRING=http://gateway-service:8080
+ENV NEXT_PUBLIC_SPRING_CLIENT=http://192.168.100.101:8080
+ENV NEXTAUTH_URL=http://localhost:3000
+ENV NEXTAUTH_URL_INTERNAL=http://nextjs:3000
+
 # Uncomment the following line in case you want to disable telemetry during runtime.
 # ENV NEXT_TELEMETRY_DISABLED 1
 
@@ -94,7 +98,7 @@ USER nextjs
 
 EXPOSE 3000
 
-ENV PORT 3000
+ENV PORT=3000
 
 # server.js is created by next build from the standalone output
 # https://nextjs.org/docs/pages/api-reference/next-config-js/output
