--- a/client-micro/Dockerfile
+++ b/client-micro/Dockerfile
@@ -73,7 +73,8 @@ WORKDIR /app
 
 ENV NODE_ENV=production
 ENV NEXT_PUBLIC_SPRING=http://gateway-service:8080
-ENV NEXT_PUBLIC_SPRING_CLIENT=http://192.168.100.101:8080
+#ENV NEXT_PUBLIC_SPRING_CLIENT=http://192.168.100.101:8080
+ENV NEXT_PUBLIC_SPRING_CLIENT=http://localhost:8080
 ENV NEXTAUTH_URL=http://localhost:3000
 ENV NEXTAUTH_URL_INTERNAL=http://nextjs:3000
 
