--- a/client-micro/Dockerfile
+++ b/client-micro/Dockerfile
@@ -46,7 +46,6 @@ FROM node:alpine AS base
 
 # Install dependencies only when needed
 FROM base AS deps
-# Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
 RUN apk add --no-cache libc6-compat
 WORKDIR /app
 
@@ -60,38 +59,31 @@ WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
 
-# Next.js collects completely anonymous telemetry data about general usage.
-# Learn more here: https://nextjs.org/telemetry
-# Uncomment the following line in case you want to disable telemetry during the build.
-# ENV NEXT_TELEMETRY_DISABLED 1
-
 RUN npm run build
 
 # Production image, copy all the files and run next
 FROM base AS runner
 WORKDIR /app
 
-ENV NODE_ENV=production
-ENV NEXT_PUBLIC_SPRING=http://gateway-service:8080
-#ENV NEXT_PUBLIC_SPRING_CLIENT=http://192.168.100.101:8080
-ENV NEXT_PUBLIC_SPRING_CLIENT=http://localhost:8080
-ENV NEXTAUTH_URL=http://localhost:3000
-ENV NEXTAUTH_URL_INTERNAL=http://nextjs:3000
+ARG NEXT_PUBLIC_SPRING=http://gateway-service:8080
+ARG NEXT_PUBLIC_SPRING_CLIENT=http://localhost:8080
+ARG NEXTAUTH_URL=http://localhost:3000
+ARG NEXTAUTH_URL_INTERNAL=http://nextjs:3000
 
-# Uncomment the following line in case you want to disable telemetry during runtime.
-# ENV NEXT_TELEMETRY_DISABLED 1
+ENV NEXT_PUBLIC_SPRING=$NEXT_PUBLIC_SPRING
+ENV NEXT_PUBLIC_SPRING_CLIENT=$NEXT_PUBLIC_SPRING_CLIENT
+ENV NEXTAUTH_URL=$NEXTAUTH_URL
+ENV NEXTAUTH_URL_INTERNAL=$NEXTAUTH_URL_INTERNAL
+ENV NODE_ENV=production
 
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
 
 COPY --from=builder /app/public ./public
 
-# Set the correct permission for prerender cache
 RUN mkdir .next
 RUN chown nextjs:nodejs .next
 
-# Automatically leverage output traces to reduce image size
-# https://nextjs.org/docs/advanced-features/output-file-tracing
 COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
 COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
 
@@ -101,6 +93,4 @@ EXPOSE 3000
 
 ENV PORT=3000
 
-# server.js is created by next build from the standalone output
-# https://nextjs.org/docs/pages/api-reference/next-config-js/output
 CMD node server.js
