--- a/client-micro/Dockerfile
+++ b/client-micro/Dockerfile
@@ -46,6 +46,7 @@ FROM node:alpine AS base
 
 # Install dependencies only when needed
 FROM base AS deps
+# Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
 RUN apk add --no-cache libc6-compat
 WORKDIR /app
 
@@ -53,11 +54,17 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm install
 
+
 # Rebuild the source code only when needed
 FROM base AS builder
 WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
+
+# Next.js collects completely anonymous telemetry data about general usage.
+# Learn more here: https://nextjs.org/telemetry
+# Uncomment the following line in case you want to disable telemetry during the build.
+# ENV NEXT_TELEMETRY_DISABLED 1
 
 RUN npm run build
 
@@ -65,25 +72,21 @@ RUN npm run build
 FROM base AS runner
 WORKDIR /app
 
-ARG NEXT_PUBLIC_SPRING=http://gateway-service:8080
-ARG NEXT_PUBLIC_SPRING_CLIENT=http://localhost:8080
-ARG NEXTAUTH_URL=http://localhost:3000
-ARG NEXTAUTH_URL_INTERNAL=http://nextjs:3000
-
-ENV NEXT_PUBLIC_SPRING=$NEXT_PUBLIC_SPRING
-ENV NEXT_PUBLIC_SPRING_CLIENT=$NEXT_PUBLIC_SPRING_CLIENT
-ENV NEXTAUTH_URL=$NEXTAUTH_URL
-ENV NEXTAUTH_URL_INTERNAL=$NEXTAUTH_URL_INTERNAL
-ENV NODE_ENV=production
+ENV NODE_ENV production
+# Uncomment the following line in case you want to disable telemetry during runtime.
+# ENV NEXT_TELEMETRY_DISABLED 1
 
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
 
 COPY --from=builder /app/public ./public
 
+# Set the correct permission for prerender cache
 RUN mkdir .next
 RUN chown nextjs:nodejs .next
 
+# Automatically leverage output traces to reduce image size
+# https://nextjs.org/docs/advanced-features/output-file-tracing
 COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
 COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
 
@@ -91,6 +94,8 @@ USER nextjs
 
 EXPOSE 3000
 
-ENV PORT=3000
+ENV PORT 3000
 
+# server.js is created by next build from the standalone output
+# https://nextjs.org/docs/pages/api-reference/next-config-js/output
 CMD node server.js
